tex/tex_parse.output
Terminals unused in grammar

   TEXT
   BEG


Grammar

    0 $accept: START $end

    1 START: CONTENUS

    2 CONTENUS: CONTENU

    3 CONTENU: BACKSLASH COMMANDE
    4        | %empty

    5 COMMANDE: TITLE '{' STRING '}'
    6         | SECTION '{' STRING '}'
    7         | PARAGRAPH '{' STRING '}'

    8 STRING: %empty
    9       | STRING SPACE WORD


Terminals, with rules where they appear

$end (0) 0
'{' (123) 5 6 7
'}' (125) 5 6 7
error (256)
TEXT (258)
BEG (259)
WORD (260) 9
BACKSLASH (261) 3
SPACE (262) 9
SECTION (263) 6
PARAGRAPH (264) 7
TITLE (265) 5


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
START (14)
    on left: 1, on right: 0
CONTENUS (15)
    on left: 2, on right: 1
CONTENU (16)
    on left: 3 4, on right: 2
COMMANDE (17)
    on left: 5 6 7, on right: 3
STRING (18)
    on left: 8 9, on right: 5 6 7 9


State 0

    0 $accept: . START $end

    BACKSLASH  shift, and go to state 1

    $default  reduce using rule 4 (CONTENU)

    START     go to state 2
    CONTENUS  go to state 3
    CONTENU   go to state 4


State 1

    3 CONTENU: BACKSLASH . COMMANDE

    SECTION    shift, and go to state 5
    PARAGRAPH  shift, and go to state 6
    TITLE      shift, and go to state 7

    COMMANDE  go to state 8


State 2

    0 $accept: START . $end

    $end  shift, and go to state 9


State 3

    1 START: CONTENUS .

    $default  reduce using rule 1 (START)


State 4

    2 CONTENUS: CONTENU .

    $default  reduce using rule 2 (CONTENUS)


State 5

    6 COMMANDE: SECTION . '{' STRING '}'

    '{'  shift, and go to state 10


State 6

    7 COMMANDE: PARAGRAPH . '{' STRING '}'

    '{'  shift, and go to state 11


State 7

    5 COMMANDE: TITLE . '{' STRING '}'

    '{'  shift, and go to state 12


State 8

    3 CONTENU: BACKSLASH COMMANDE .

    $default  reduce using rule 3 (CONTENU)


State 9

    0 $accept: START $end .

    $default  accept


State 10

    6 COMMANDE: SECTION '{' . STRING '}'

    $default  reduce using rule 8 (STRING)

    STRING  go to state 13


State 11

    7 COMMANDE: PARAGRAPH '{' . STRING '}'

    $default  reduce using rule 8 (STRING)

    STRING  go to state 14


State 12

    5 COMMANDE: TITLE '{' . STRING '}'

    $default  reduce using rule 8 (STRING)

    STRING  go to state 15


State 13

    6 COMMANDE: SECTION '{' STRING . '}'
    9 STRING: STRING . SPACE WORD

    SPACE  shift, and go to state 16
    '}'    shift, and go to state 17


State 14

    7 COMMANDE: PARAGRAPH '{' STRING . '}'
    9 STRING: STRING . SPACE WORD

    SPACE  shift, and go to state 16
    '}'    shift, and go to state 18


State 15

    5 COMMANDE: TITLE '{' STRING . '}'
    9 STRING: STRING . SPACE WORD

    SPACE  shift, and go to state 16
    '}'    shift, and go to state 19


State 16

    9 STRING: STRING SPACE . WORD

    WORD  shift, and go to state 20


State 17

    6 COMMANDE: SECTION '{' STRING '}' .

    $default  reduce using rule 6 (COMMANDE)


State 18

    7 COMMANDE: PARAGRAPH '{' STRING '}' .

    $default  reduce using rule 7 (COMMANDE)


State 19

    5 COMMANDE: TITLE '{' STRING '}' .

    $default  reduce using rule 5 (COMMANDE)


State 20

    9 STRING: STRING SPACE WORD .

    $default  reduce using rule 9 (STRING)
